mernapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: mernapp
  ports:
    - protocol: TCP
      port: 5000      # Port on the service
      targetPort: 5000   # Port on the pods
  type: ClusterIP
