summy.yaml
apiVersion: v1
kind: Service
metadata:
  name: summy
spec:
  selector:
    app: summy
  ports:
  - port: 80
    targetPort: 8080
